--- a/android/build.gradle
+++ b/android/build.gradle
@@ -48,7 +48,7 @@ android {
         disable 'InvalidPackage'
     }
     buildTypes {
-        defaultConfig {
+        release {
             ndk {
                 abiFilters 'arm64-v8a'
             }
