--- a/ios/Classes/CMakeSettings.json
+++ b/ios/Classes/CMakeSettings.json
@@ -8,6 +8,7 @@
       "buildRoot": "${projectDir}\\out\\build\\${name}",
       "installRoot": "${projectDir}\\out\\install\\${name}",
       "cmakeCommandArgs": "",
+      "buildCommandArgs": "",
       "ctestCommandArgs": ""
     }
   ]
